ui_tests/type_def_res_1.stderr
error: failed to resolve `EnumIguess`
   ┌─ main.box:15:16
   │
15 │         inner: EnumIguess::Blah::F,
   │                ^^^^^^^^^^

