ui_tests/type_def_res_1.box
type Foo {
    field: type {},
}

type Other {
    fffiiield: Foo::Field,
}

type EnumIguess {
    | Blah { f: type {} }
}

mod my_module {
    type MyTYyyyy {
        inner: EnumIguess::Blah::F,
    }

    mod barrrr {
        type TyTyTy {
            ffield: type {}
        }
    }
}

type Whatever {
    a: type {},
    b: A,
}

fn foo() {
    new Foo::Field {};
    new my_module::barrrr::TyTyTy::Ffield {};
}